force-app/main/default/objects/B25__Reservation_Type__c/B25__Reservation_Type__c.object-meta.xml
<CustomObject>
    <description>The type of a Reservation influences what fields are visible on the Reservation form and can be linked to a SalesForce record type.</description>
    <label>Reservation Type</label>
    <nameField>
        <label>Reservation Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservation Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>