force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__Duration__c</fullName>
    <description>The duration in minutes for reservations of this type.</description>
    <inlineHelpText>La durée en minutes pour les réservations de ce type.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>