force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Field_Set__c.field-meta.xml
<CustomField>
    <fullName>B25__Field_Set__c</fullName>
    <description>Enter the API name of a field set on the Reservation object. These fields will be added to the Reservation form.</description>
    <inlineHelpText>Saisissez le nom API d’un champ défini sur l’objet de réservation. Ces champs seront ajoutés au formulaire de réservation.</inlineHelpText>
    <label>Field Set to use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>