force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Hide_Pricing_Section__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_Pricing_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this setting hides the pricing section on the reservation form.</description>
    <label>Hide Pricing Section</label>
    <type>Checkbox</type>
</CustomField>