force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Hide_Recurring_Section__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_Recurring_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, hides the recurring reservation section.</description>
    <inlineHelpText>Lorsqu&apos;il est activé, masque la section de réservation récurrente.</inlineHelpText>
    <label>Hide Recurring Section</label>
    <type>Checkbox</type>
</CustomField>