force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Hide_Service_Section__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_Service_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By enabling this checkbox you will not be able to add service reservations when you have this reservation type selected</description>
    <inlineHelpText>En activant cette case à cocher, vous ne pourrez pas ajouter de réservations de services lorsque ce type de réservation est sélectionné</inlineHelpText>
    <label>Hide Service Section</label>
    <type>Checkbox</type>
</CustomField>