force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Record_Type__c</fullName>
    <description>Enter the API name of a Reservation record type. This will link the Reservation Type with the record type.</description>
    <inlineHelpText>Saisissez le nom API d’un type d’enregistrement de réservation. Cela liera le type de réservation au type d’enregistrement.</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>