force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Reservation_End_Buffer_Size__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_End_Buffer_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The size of the reservation end buffer in minutes. This will be displayed on the calendar and can be used to indicate clean-up time after the actual reservation has taken place.</description>
    <inlineHelpText>La taille du tampon de fin de réservation en minutes. Elle sera affichée sur le calendrier et peut être utilisée pour indiquer le temps de nettoyage après que la réservation réelle ait eu lieu.</inlineHelpText>
    <label>Reservation End Buffer Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>