force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Reservation_Start_Buffer_Size__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Start_Buffer_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The size of the reservation start buffer in minutes. This will be displayed on the calendar and can be used to indicate set-up time before the actual reservation takes place.</description>
    <inlineHelpText>La taille du tampon de début de réservation en minutes. Elle sera affichée sur le calendrier et peut être utilisée pour indiquer le temps de mise en place avant que la réservation réelle ait lieu.</inlineHelpText>
    <label>Reservation Start Buffer Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>