force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Selection_Includes_Buffer_Time__c.field-meta.xml
<CustomField>
    <fullName>B25__Selection_Includes_Buffer_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When disabled, the buffer time is added outside of the time range selected by the user. When enabled, the buffer time is included in the time range (making the actual reservation smaller).</description>
    <inlineHelpText>Lorsque cette option est désactivée, le temps de tampon est ajouté en dehors de la plage horaire sélectionnée par l’utilisateur. Lorsque cette option est activée, le temps de tampon est inclus dans la plage horaire (ce qui rend la réservation réelle plus courte).</inlineHelpText>
    <label>Selection Includes Buffer Time</label>
    <type>Checkbox</type>
</CustomField>