force-app/main/default/objects/B25__Reservation_Type__c/fields/B25__Super_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Super_Type__c</fullName>
    <description>The super type of this Reservation Type. Super types wil be shown in the dropdown at the top of the Reservation form. All subtypes of this super type can then be selected in a dropdown in the form itself.</description>
    <inlineHelpText>Le super-type de ce type de réservation. Les super-types seront affichés dans la liste déroulante en haut du formulaire de réservation. Tous les sous-types de ce super-type peuvent ensuite être sélectionnés dans une liste déroulante dans le formulaire en soi.</inlineHelpText>
    <label>Super Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>