force-app/main/default/objects/B25__Reservation_Type__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Field_Set__c</columns>
    <columns>B25__Record_Type__c</columns>
    <columns>B25__Super_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>